# K-GG

./: .gitignore  .markdownlint.json  AGENTS.md  CONTRIBUTING.md  LICENSE  NOTICE  README.md  eslint.config.js  index.html  package-lock.json  package.json  vite-plugin-ae-bridge.ts  vite.config.ts
.github/: pull_request_template.md
.github/workflows/: ci.yml  release.yml
docs/: index.md  releasing.md
docs/.vitepress/: config.ts
docs/adr/: 0001-documentation-source-of-truth.md  0002-ffmpeg-discovery-locations.md  0003-image-gradient-anchor-influence.md  0004-postprocess-stack-rendering.md  0005-unified-effect-stack-v2.md  0006-tweeq-ui-controls.md  0007-preset-library-storage-format.md  0008-preset-rendered-thumbnails.md  0009-unified-parameter-limits.md  0010-image-gradient-color-field-rendering.md  _template.md  index.md
docs/development/: architecture.md  development-guide.md  docdd.md  index.md  project-overview.md
docs/specs/: SPEC-000-docdd-foundation.md  SPEC-001-postprocess-animation-policy.md  SPEC-002-tauri-frame-scheduler-compatibility.md  SPEC-003-organic-glass-postprocess.md  SPEC-004-bundled-svg-icons.md  SPEC-005-video-export-naming.md  SPEC-006-verification-commands.md  SPEC-007-ffmpeg-install-guidance.md  _template.md  (+31 more)
src/: App.css  App.tsx  design-tokens.css  index.css  main.tsx
src-tauri/: Cargo.toml  build.rs  tauri.conf.json
src-tauri/capabilities/: default.json  effect-stack.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
tools/: check-docs.mjs  release-version.mjs  set-updater-public-key.mjs  verify-windows.ps1
(+190 files in other folders)
