[package]
name = "kagaribi_grad"
version = "0.1.0"
description = "KAGARIBI Grad desktop app"
authors = ["KAGARIBI"]
edition = "2021"

[lib]
name = "kagaribi_grad_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
tauri-plugin-process = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
